# hinversi

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  header.txt  string-board.txt
cgi/: Makefile.am  Makefile.in  main.c
check/: Makefile.am  Makefile.in  check_othello.c
doc/: Doxyfile.in  Makefile.am  Makefile.in  hinversi-cli.1
gui/: Makefile  Makefile.am  Makefile.bak  gtkgui.c
human-cli/: Makefile.am  Makefile.in  human-cli.c  human-cli.h  main.c  main.h
lib/: Makefile.am  Makefile.in  abClient.c  abClient.h  aiManager.c  aiManager.h  libhinversi.pc.in  macros.h  matador.c  matador.h  naiv-client.c  naiv-client.h  othello.c  othello.h  ringbuf.c  ringbuf.h  simpleClient.c  simpleClient.h
m4/: ChangeLog
po/: ChangeLog  POTFILES.in  de.gmo  de.po  hinversi.pot  pt_BR.gmo  pt_BR.po
stats/: moves-nodes  moves-nodes-min-max  statistics  statistics-moves_per_turn  statistics-nodes_per_turn  stats.gnumeric
